--- a/conf/Anticheat.conf.dist
+++ b/conf/Anticheat.conf.dist
@@ -44,6 +44,12 @@ Anticheat.LoginMessage = 0
 
 Anticheat.WriteLog = 0
 
+#     Anticheat.SaveReportsTime
+#       Description: Set the time between each report save in seconds
+#       Default:    60 - (seconds)
+
+Anticheat.SaveReportsTime = 60
+
 #     Anticheat.Detect
 #       Description: It represents which detections are enabled (ClimbHack disabled by default).
 #       Default:    1 - (Enabled)
